abraham
Estadistiques més taules fetes (taules un poc poor)